--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,7 @@
           </ul>
         </nav>
       </div>
+    </div>
   </header>
 
 
@@ -92,9 +93,9 @@
 
   <section class="welcome">
     <div class="container">
-      <div class="welcome__title title">
+      <h2 class="welcome__title title">
         Welcome to Zippy
-      </div>
+      </h2>
       <div class="welcome__inner">
         <div class="welcome__text">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor
           aliquet. Aenean sol-licitudin, lorem quis bibendum auctor.</div>
@@ -153,9 +154,9 @@
   </section>
 
   <section class="project" id="project">
-    <div class="project__title title">
+    <h2 class="project__title title">
       Projects
-    </div>
+    </h2>
     <div class="project__items">
       <div class="project__item">
         <a class="project__item-img" href="#" style="background-image: url(images/projects/project-1.jpg);"></a>
@@ -227,9 +228,9 @@
 
   <section class="pricing" id="pricing">
     <div class="container">
-      <div class="pricing__title title">
+      <h2 class="pricing__title title">
         Pricing Table
-      </div>
+      </h2>
       <div class="pricing__items">
         <div class="pricing__item">
           <div class="pricing__item-title">
@@ -293,9 +294,9 @@
   </section>
 
   <section class="video-slider">
-    <div class="video-slider__title title">
+    <h2 class="video-slider__title title">
       Video Projects
-    </div>
+    </h2>
     <div class="video-slider__inner">
       <div class="video-slider__item">
         <a class="slider__link" data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk">
@@ -342,9 +343,9 @@
 
   <section class="team" id="team">
     <div class="container">
-      <div class="team__title title">
+      <h2 class="team__title title">
         Zippy Team
-      </div>
+      </h2>
       <div class="team__items">
         <div class="team__item">
           <div class="team__item-photo" style="background-image: url(images/team/team1.jpg);"></div>
@@ -448,7 +449,7 @@
 
   <section class="life">
     <div class="container">
-      <div class="life__title title">Life in Zippy</div>
+      <h2 class="life__title title">Life in Zippy</h2>
       <div class="life__inner">
         <div class="life__slider-for">
           <div class="slider__image-for"><img src="images/life-slider/audi1.jpg" alt=""></div>
@@ -475,9 +476,9 @@
 
   <section class="newsletter" style="background-image: url(images/newsletter.jpg);">
     <div class="container">
-      <div class="newsletter__title title">
+      <h2 class="newsletter__title title">
         Newsletter Signup
-      </div>
+      </h2>
       <div class="newsletter__inner">
         <form class="newsletter__form">
           <input class="newsletter__input" type="text" placeholder="abc@example.com">
@@ -490,9 +491,9 @@
 
   <section class="blog" id="blog">
     <div class="container">
-      <div class="blog__title title">
+      <h2 class="blog__title title">
         Blog
-      </div>
+      </h2>
       <div class="blog__items">
         <div class="blog__item">
           <div class="blog__item-image">
@@ -550,9 +551,9 @@
     <div class="container-fluid">
       <div id="map"></div>
       <form class="contact__form">
-        <div class="contact__form-title title">
+        <h2 class="contact__form-title title">
           Contact
-        </div>
+        </h2>
         <div class="contact__form-row">
           <label for="name">Name</label>
           <input type="text" id="name">
