--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-
   <header class="header" id="header">
     <div class="container">
       <div class="header__inner">
@@ -93,9 +92,7 @@
 
   <section class="welcome">
     <div class="container">
-      <h2 class="welcome__title title">
-        Welcome to Zippy
-      </h2>
+      <h2 class="welcome__title title">Welcome to Zippy</h2>
       <div class="welcome__inner">
         <div class="welcome__text">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor
           aliquet. Aenean sol-licitudin, lorem quis bibendum auctor.</div>
